# study

ai-dev/vision-demo/: main.py  pyproject.toml
normal-dev/: .gitignore  README.md
normal-dev/go/test/: check_env.go  go.mod
normal-dev/java/init/: pom.xml
normal-dev/java/init/src/test/java/com/example/init/: InitApplicationTests.java
normal-dev/python/: main.py
normal-dev/学习记录/note/stage-A/: 01-blind-spots.md  02-测试题.md  03-学习日志.md  04-周复盘.md
normal-dev/学习记录/学习计划/: 第一阶段.md
normal-dev/笔记/git/: Git-项目初始化与推送.md
normal-dev/笔记/临时文件/: python学习计划.md
normal-dev/笔记/其他/: vscode插件.md
normal-dev/笔记/命令行命令/: maven.md
normal-dev/笔记/环境配置/: maven.md
